--- a/gamedata/localization/it-IT.json
+++ b/gamedata/localization/it-IT.json
@@ -89,6 +89,19 @@
 			"kick" : "Espelli dalla colonia",
 			"leader" : "Leader",
 			"leave" : "Abbandona colonia",
+			"managecolonies" : {
+				"location" : {
+					"east" : "{0} blocchi est",
+					"key" : "Posizione: ",
+					"north" : "{0} blocchi nord, ",
+					"south" : "{0} blocchi sud, ",
+					"west" : "{0} blocchi ovest"
+				},
+				"mainbutton" : "Gestisci Colonie",
+				"mainheader" : "Gestisci Colonia",
+				"selectheader" : "Selezina una colonia da gestire",
+				"siegemode" : "Modalità Assedio:"
+			},
 			"manageheader" : "Gestione Proprietà",
 			"manageowners" : "Gestisci Proprietari",
 			"nameedit" : "Modifica nome colonia:",
@@ -103,6 +116,7 @@
 			"recruittext5" : "Il costo è {0} del costo normale a causa della felicità",
 			"recruittofillbeds" : "Recluta per occupare tutti i letti",
 			"recruittofilljobs" : "Recluta per occupare tutti i lavori",
+			"resetcolonypriority" : "Resetta le proprietà della colonia corrente",
 			"science" : {
 				"incomingdescription" : "{0} condividerà la propria scienza con te",
 				"newagreement" : "Proponi accordo scientifico",
@@ -606,7 +620,7 @@
 			"inventory" : {
 				"availableamount" : "In magazzino: {0}",
 				"calorievalue" : "{0} calorie per unità",
-				"craftingstockpile" : "Produzione ed Inventario",
+				"craftingstockpile" : "Produz. e Inventario",
 				"distributionhappyperitem" : "Felicità per oggetto: {0}",
 				"distributionpercolonist" : "Unità giornaliera per colono: {0}",
 				"distributionplanned" : "Aumento felicità previsto: {0}",
@@ -649,7 +663,7 @@
 				"description" : "Seleziona il tipo di oggetto da usare",
 				"header" : "Selezione Oggetto"
 			},
-			"Limiti" : {
+			"limits" : {
 				"description" : "I coloni lavoreranno fino a raggiungere la quantità fissata nel magazzino.",
 				"hoverpriority" : {
 					"a" : "Priorità di costruzione",
